@@ -1,3 +1,7 @@
+2009-07-01  Badlop  <badlop@process-one.net>
+
+	* src/mod_muc_admin.erl: Fix change_room_option
+
 2009-06-02  Badlop  <badlop@process-one.net>
 
 	* src/mod_muc_admin.erl: Destroy the room before forgetting it.
